# solar

./: CMakeLists.txt  doxygen.config  dynamics.cpp  dynamics.h  example.txt  main.cpp  newton.cpp  newton.h  particle.cpp  particle.h  physics.cpp  physics.h  solar.kdev4  solar_io.cpp  solar_io.h  test.eps  test.gnu  vector_operations.cpp  vector_operations.h
.kdev4/: solar.kdev4
